2015-08-09  Mikael Magnusson  <mikachu@gmail.com>

	* unposted: Test/C03traps.ztst: add tests for outputting traps
	specified with SIG prefix or numbers fixed by 36008.

2015-08-09  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 26027: Src/builtin.c: fix retying variables in opposite
	order (should be an error).

	* 36025:Src/Zle/zle_tricky.c: Catch another case of context in
	get_comp_string():  after "foo=bar; setopt " we didn't recognise
	"setopt" as the command.  Attempt to do this without actually
	understanding what the command context code is attempting to do
	after a command separator.

2015-08-09  Barton E. Schaefer  <schaefer@zsh.org>

	* 36026: Src/Modules/zftp.c: zero freed pointers in cleanup_()
	in case the module is re-loaded after unloading.

	* 36022: Src/loop.c: fix bug that some loop constructs could
	not be interrupted if all they did was variable assignments or
	math expressions

	* 36022: Src/exec.c, Src/init.c, Src/input.c, Src/parse.c,
	Src/signals.c: revise signal queueing to better control the
	circumtances in which trap handlers are executed

2015-08-08  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 36008: Src/builtin.c: trap: Fix listing of traps created
	under non-alias non-canonical signal spelling

2015-08-08  Mikael Magnusson  <mikachu@gmail.com>

	* 35954: Doc/Zsh/mod_system.yo: sysopen -u is not optional

2015-08-09  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 35929: Src/jobs.c: protect FDT_PROC_SUBST by #ifdef

2015-08-08  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 35928: Src/utils.c, Doc/Zsh/prompt.yo: date/time format such
	as '%-m' should work even if strftime(3) doesn't support it.
	Also clarify document.

2015-08-05  Mikael Magnusson  <mikachu@gmail.com>

	* 35989: Completion/Unix/Command/_ssh: update to 6.9

	* unposted: Completion/Unix/Command/_ssh: use -q for the
	option suffix

	* Christian Hesse: 35991: Completion/Unix/Command/_ssh: add ssh
	option FingerprintHash
